--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Kai Blog
 SEOTitle: Kai Blog | 任宏凯的博客
-header-img: img/post-bg-rwd.jpg
+header-img: img/me.jpg
 email: renhongkai27@gmail.com
 description: "Every failure is leading towards success."
 keyword: "Kai Blog, 任宏凯的博客, renhongkai, AI, ML, DL, NLP"
